<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151414"
    android:focusableInTouchMode="true"
    tools:context=".presentacion.Inicio.InicioActivity">

    <!-- LOGO -->
    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="198dp"
        android:layout_height="225dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- CORREO -->
    <EditText
        android:id="@+id/edt_correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/edt_correo"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:background="@android:drawable/edit_text"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/imgViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- PASSWORD -->
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:background="@android:drawable/edit_text"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/edt_correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- BOTÓN LOGIN -->
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/actiniciar_sesion"
        android:textSize="18sp"
        android:textColor="#121212"
        android:backgroundTint="@color/white"
        android:onClick="onClicVerificar"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- BOTÓN REGISTRO -->
    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/actiniciar_registro"
        android:textSize="18sp"
        android:textColor="#121212"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnlogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
