<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.categorias.activity_ListaCategoria"
    android:background="#151414">
    <!-- HEADER -->
        <ImageView
        android:id="@+id/logoperfil"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/logoperfil"
        android:background="@drawable/sharpe_circle"
        android:clipToOutline="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtcat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actiniciar_categoria"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/logoperfil"/>

    <!-- BOTONES -->
    <Button
        android:id="@+id/btnninos"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:text="@string/actlista_ninos"
        android:backgroundTint="#E53935"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/txtcat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:radius="20dp"/>

    <Button
        android:id="@+id/btnadultos"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:text="@string/actlista_adulto"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:backgroundTint="#1E88E5"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/btnninos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>